# django-visitor-pass

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .ruff.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
demo/: apps.py  settings.py  signals.py  urls.py  views.py
demo/templates/: bar.html  index.html
demo/templates/visitors/: self_service_request.html  self_service_success.html
tests/: conftest.py  settings.py  test_context_processors.py  test_decorators.py  test_forms.py  test_middleware.py  test_models.py  test_my_app.py  test_views.py  urls.py  views.py
visitors/: CHANGELOG  admin.py  apps.py  context_processors.py  decorators.py  exceptions.py  forms.py  middleware.py  models.py  session.py  settings.py  signals.py  urls.py  views.py
visitors/migrations/: 0001_initial.py  0002_visitorlog.py  0003_visitor_is_active.py  0004_visitor_expires_at.py  0005_visitorlog_status_code.py  0006_alter_visitor_uuid.py  0007_visitor_session_expiry.py
visitors/templates/: self_service.html
visitors/templates/visitors/: self_service_request.html  self_service_success.html
