[tool.poetry]
name = "django-visitor-pass"
version = "1.2"
description = "Django app for managing temporary session-based users."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-visitor-pass"
repository = "https://github.com/yunojuno/django-visitor-pass"
documentation = "https://github.com/yunojuno/django-visitor-pass"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "visitors" }]

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2,<7.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
